objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Capacit_minimum__c</fullName>
        <label>Capacité minimum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacite__c</fullName>
        <label>Capacité maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_t_de_revient_session__c</fullName>
        <label>Coût de revient session</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code_Agresso_Session_formation__c</fullName>
        <label>Code Agresso Session formation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Salesforce__c</fullName>
        <label>Code Salesforce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_agresso_for__c</fullName>
        <description>Ce champ va être renseigné manuellement ou par chargement et sert pour export vers AGRESSO en tant que code formation. Ex: 15SELPGM--1</description>
        <label>Code agresso Formation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_session_pivot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code session pivot</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Sessions de formation (Code session pivot)</relationshipLabel>
        <relationshipName>Sessions_de_formation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_de_debut_de_session__c</fullName>
        <label>Date de début de session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_de_session__c</fullName>
        <label>Date de fin de session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exercice_fiscale__c</fullName>
        <label>Exercice fiscal</label>
        <picklist>
            <picklistValues>
                <fullName>SF-EF10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-EF90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intervenant__c</fullName>
        <label>Intervenant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu__c</fullName>
        <label>Lieu détail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu_ls__c</fullName>
        <label>Lieu</label>
        <picklist>
            <picklistValues>
                <fullName>SF-LS10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-LS20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-LS30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-LS40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-LS50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-LS60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_apprentissage__c</fullName>
        <label>Mode d&apos;apprentissage</label>
        <picklist>
            <picklistValues>
                <fullName>SF-MA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-MA20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-MA30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ne_pas_afficher_sur_le_site_EML__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Cocher ce champ pour ne pas exporter sur le site EML</description>
        <inlineHelpText>Cocher ce champ pour ne pas exporter sur le site EML</inlineHelpText>
        <label>Ne pas afficher sur le site EML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objectif_CA_Session__c</fullName>
        <description>Utilisé pour les rapports BI</description>
        <label>Objectif CA Session</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectif_participation__c</fullName>
        <description>Utilisé pour les rapports BI</description>
        <label>Objectif participation session</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prix_specifique__c</fullName>
        <label>Prix spécifique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Produits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_6_avant_d_but__c</fullName>
        <formula>Date_de_debut_de_session__c - TODAY()  &lt;= 45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S-6 avant début</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salle__c</fullName>
        <label>Salle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_de_formation_associee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session de formation associée</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Sessions de formation</relationshipLabel>
        <relationshipName>Sessions_de_formation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <picklist>
            <picklistValues>
                <fullName>SF-SS10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-SS20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-SS30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF-SS40</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taux_TVA__c</fullName>
        <label>Taux TVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_Enregistrement_Produit__c</fullName>
        <formula>Produits__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Enregistrement Produit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <description>Id Salesforce sur 18 caractères</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <label>Session de formation</label>
    <listViews>
        <fullName>AMP_2016</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>AMP</value>
        </filters>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF50</value>
        </filters>
        <label>Programmes longs AMP- Sessions 2016-2017</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_AMP</group>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
            <group>Vues_Opp_DUA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Formation_Continue_Session_Abandonn_e</fullName>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Statut__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF40,2015-2016</value>
        </filters>
        <filters>
            <field>Statut__c</field>
            <operation>equals</operation>
            <value>SF-SS10</value>
        </filters>
        <label>Programmes Courts - Sessions en attente</label>
        <language>fr</language>
        <sharedTo>
            <group>EML_Programmes_Courts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OK_Programmes_Courts_Sessions_2016_2017</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Intervenant__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>NAME</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>17</value>
        </filters>
        <filters>
            <field>Type_Enregistrement_Produit__c</field>
            <operation>equals</operation>
            <value>module,pack</value>
        </filters>
        <label>OK Programmes Courts -Sessions 2016-2017</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OK_Programmes_Courts_Sophie_MAGENTA</fullName>
        <columns>Intervenant__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>17</value>
        </filters>
        <filters>
            <field>Ne_pas_afficher_sur_le_site_EML__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Type_Enregistrement_Produit__c</field>
            <operation>equals</operation>
            <value>module,pack</value>
        </filters>
        <filters>
            <field>Intervenant__c</field>
            <operation>equals</operation>
            <value>Sophie MAGENTA</value>
        </filters>
        <label>OK Programmes Courts -Sophie MAGENTA</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Porgrammes_Courts1</fullName>
        <columns>NAME</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Intervenant__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
        <columns>Mode_apprentissage__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Statut__c</columns>
        <columns>Lieu__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>17TD</value>
        </filters>
        <label>Programmes Courts - Sessions Transfo Dig</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Programmes_Courts_2015_2016</fullName>
        <columns>OBJECT_ID</columns>
        <columns>S_6_avant_d_but__c</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF40,2015-2016</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Date_de_debut_de_session__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Type_Enregistrement_Produit__c</field>
            <operation>equals</operation>
            <value>module</value>
        </filters>
        <label>Programmes Courts - Sessions 2015-2016</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_Courts_Sessions_2016_2017_P</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>Intervenant__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
        <columns>Statut__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Enregistrement_Produit__c</field>
            <operation>equals</operation>
            <value>module</value>
        </filters>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>17</value>
        </filters>
        <filters>
            <field>Lieu_ls__c</field>
            <operation>equals</operation>
            <value>SF-LS20</value>
        </filters>
        <label>Programmes Courts - Sessions 2016-2017 P</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_Courts_Sessions_Packs</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Intervenant__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
        <columns>Statut__c</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Enregistrement_Produit__c</field>
            <operation>equals</operation>
            <value>pack</value>
        </filters>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>16</value>
        </filters>
        <label>Programmes Courts - Sessions Packs</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_Courts_Sessions_compl_tes</fullName>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Lieu_ls__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF50</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ML03</value>
        </filters>
        <label>Programmes Courts - Sessions ML03 (MSE)</label>
        <language>fr</language>
        <sharedTo>
            <group>EML_Programmes_Courts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_Courts_Sessions_en_attente</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Statut__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF40,2015-2016</value>
        </filters>
        <filters>
            <field>Statut__c</field>
            <operation>equals</operation>
            <value>SF-SS40</value>
        </filters>
        <label>Programmes Courts - Sessions abandonées</label>
        <language>fr</language>
        <sharedTo>
            <group>EML_Programmes_Courts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_courts_Liste_des_sessions1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>S_6_avant_d_but__c</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF40,2015-2016,SF-EF50,SF-EF60</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>COTTE</value>
        </filters>
        <filters>
            <field>Date_de_debut_de_session__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PGM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>frais</value>
        </filters>
        <label>Programmes longs PGM- Liste des sessions</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_longs_MBA_Sessions</fullName>
        <columns>OBJECT_ID</columns>
        <columns>S_6_avant_d_but__c</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF50</value>
        </filters>
        <filters>
            <field>Date_de_debut_de_session__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MBA</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>vae,amba</value>
        </filters>
        <label>Programmes longs MBA- Sessions 2016-2017</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_Executive_MBA</group>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
            <group>Transverse_EMBA_IMBA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Programmes_longs_PGM_Liste_des_sessions</fullName>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF50</value>
        </filters>
        <filters>
            <field>Date_de_debut_de_session__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DUA,DUAI</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>frais</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>VAE</value>
        </filters>
        <label>Programmes longs DUA - Sessions 2017</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_AMP</group>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
            <group>Vues_Opp_DUA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VAE_Sessions_2016_2017</fullName>
        <columns>OBJECT_ID</columns>
        <columns>S_6_avant_d_but__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>Statut__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>VAE</value>
        </filters>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>17</value>
        </filters>
        <label>Programmes longs VAE- Sessions 2016-2017</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
            <group>Opp_FC_Longue</group>
            <group>Opp_VAE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>V_rif_saisie_PC_Sessions_2016_2017</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Code_agresso_for__c</columns>
        <columns>Intervenant__c</columns>
        <columns>Exercice_fiscale__c</columns>
        <columns>Ne_pas_afficher_sur_le_site_EML__c</columns>
        <columns>Statut__c</columns>
        <columns>Code_Agresso_Session_formation__c</columns>
        <columns>NAME</columns>
        <columns>Lieu_ls__c</columns>
        <columns>Date_de_debut_de_session__c</columns>
        <columns>Date_de_fin_de_session__c</columns>
        <columns>Capacit_minimum__c</columns>
        <columns>Capacite__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Enregistrement_Produit__c</field>
            <operation>equals</operation>
            <value>module</value>
        </filters>
        <filters>
            <field>Code_agresso_for__c</field>
            <operation>startsWith</operation>
            <value>16</value>
        </filters>
        <filters>
            <field>Exercice_fiscale__c</field>
            <operation>equals</operation>
            <value>SF-EF50</value>
        </filters>
        <label>Vérif saisie PC - Sessions 2016-2017</label>
        <language>fr</language>
        <sharedTo>
            <group>Opp_FC_Courte</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nom de Session</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions de formation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>